--- a/configuration.json
+++ b/configuration.json
@@ -1,16 +1,16 @@
 {
    "CONFIG": {
       "BOT_INFO": {
-         "PREFIX": ".",
+         "PREFIX": "?",
          "ADMIN_ID": [
          "100078063083482"
          ],
-         "EMAIL": "EMAIL/PHONE NUMBER/ID",
-         "PASSWORD": "PASSWORD"
+         "EMAIL": "rinz135orugejehe@gmail.com",
+         "PASSWORD": "cocomelon.com"
       },
       "PAGE_ACCOUNTS": {
          "ACCOUNTS": [
-            "EMAIL|PASS"
+            "sihegoy964@nastyx.com|Pogi123"
          ]
       }
    }
